<resources>
    <string name="app_name">CostFuel</string>
    <string name="app_name_pl">Kalkulator spalania</string>
    <string name="titleMainActivity">WYBIERZ SAMOCHÓD</string>
    <string name="addCar">Dodaj samochód</string>
    <string name="markCar">Marka samochodu</string>
    <string name="modelCar">Model samochodu</string>
    <string name="fuelType">Rodzaj paliwa</string>
    <string name="avarageFuelConsumption">średnie spalanie</string>
    <string name="cost">Koszt</string>
    <string name="buttonAddFuel">Dodaj tankowanie</string>
    <string name="buttonShowFuels">Pokaż tankowania</string>
    <string name="Settings">Ustawienia</string>
    <string name="Save">Zapisz</string>
    <string name="Quantity">Ilość</string>
    <string name="Distance">Przebieg</string>
    <string name="titleAddCar">DODAJ SAMOCHÓD</string>
    <string name="titleAddFuel">DODAJ TANKOWANIE</string>
    <string name="titleEditCar">EDYTUJ SAMOCHÓD</string>
    <string name="carIdIncommingIntent">CarId</string>
    <string-array name="period_time">
        <item>Okres wyliczania kosztów</item>
        <item>Brak ograniczeń</item>
        <item>1 miesiąc</item>
        <item>3 miesiące</item>
        <item>6 miesięcy</item>
        <item>12 miesięcy</item>
    </string-array>
    <string-array name="brands_cars">
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Dodge</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Land Rover</item>
        <item>Mazda</item>
        <item>Mercedes</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Renault</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>
    <string-array name="alfa_romeo_models">
        <item>Model samochodu</item>
        <item>145</item>
        <item>147</item>
        <item>155</item>
        <item>156</item>
        <item>159</item>
        <item>164</item>
        <item>166</item>
        <item>33</item>
        <item>4C</item>
        <item>75</item>
        <item>8C</item>
        <item>90</item>
        <item>Alfa 6</item>
        <item>Alfasud</item>
        <item>Alfetta</item>
        <item>Brera</item>
        <item>Crosswagon</item>
        <item>Giulia</item>
        <item>Giulietta</item>
        <item>GT</item>
        <item>GTV</item>
        <item>MiTo</item>
        <item>Spider</item>
        <item>Stelvio</item>
    </string-array>
    <string-array name="audi_models">
        <item>Model samochodu</item>
        <item>100</item>
        <item>200</item>
        <item>80</item>
        <item>90</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>Coupe</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q5</item>
        <item>Q7</item>
        <item>Quattro</item>
        <item>R8</item>
        <item>RS3</item>
        <item>RS4</item>
        <item>RS5</item>
        <item>RS6</item>
        <item>RS7</item>
        <item>S1</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S6</item>
        <item>S7</item>
        <item>S8</item>
        <item>TT</item>
        <item>V8</item>
    </string-array>
    <string-array name="bmw_models">
        <item>Model samochodu</item>
        <item>1M</item>
        <item>3GT</item>
        <item>5GT</item>
        <item>6GT</item>
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
        <item>M6</item>
        <item>Seria 1</item>
        <item>Seria 2</item>
        <item>Seria 3</item>
        <item>Seria 4</item>
        <item>Seria 5</item>
        <item>Seria 6</item>
        <item>Seria 7</item>
        <item>Seria 8</item>
        <item>X1</item>
        <item>X3</item>
        <item>X4</item>
        <item>X5</item>
        <item>X6</item>
        <item>Z3</item>
        <item>Z4</item>
    </string-array>
    <string-array name="chevrolet_models">
        <item>Model samochodu</item>
        <item>Alero</item>
        <item>Aveo</item>
        <item>Berette</item>
        <item>Blazer</item>
        <item>Camaro</item>
        <item>Captiva</item>
        <item>Corsica</item>
        <item>Corvette</item>
        <item>Cruze</item>
        <item>Epica</item>
        <item>Evanda</item>
        <item>HHR</item>
        <item>Kalos</item>
        <item>Lacetti</item>
        <item>Lumina</item>
        <item>Malibu</item>
        <item>Matiz</item>
        <item>Nubira</item>
        <item>Orlando</item>
        <item>Spark</item>
        <item>Tacuma</item>
        <item>Tahoe</item>
        <item>TraiBlazer</item>
        <item>Trax</item>
        <item>Volt</item>
    </string-array>
    <string-array name="chrysler_mocdels">
        <item>Model samochodu</item>
        <item>300</item>
        <item>Crossfire</item>
        <item>Daytona</item>
        <item>ES</item>
        <item>Grand Voyager</item>
        <item>GS</item>
        <item>GTS</item>
        <item>Le Baron</item>
        <item>Neon</item>
        <item>New Yorker</item>
        <item>PT Cruiser</item>
        <item>Sebring</item>
        <item>Stratus</item>
        <item>Town Country</item>
        <item>Viper</item>
        <item>Vision</item>
        <item>Voyager</item>
    </string-array>
    <string-array name="citroen_mocdels">
        <item>Model samochodu</item>
        <item>Berlingo</item>
        <item>C-Crosser</item>
        <item>C-Elysee</item>
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
        <item>C6</item>
        <item>C7</item>
        <item>C8</item>
        <item>CX</item>
        <item>DS3</item>
        <item>DS4</item>
        <item>DS5</item>
        <item>Jumper</item>
        <item>Nemo</item>
        <item>Saxo</item>
        <item>SpaceTourer</item>
        <item>Xsara</item>
        <item>Xsara Picasso</item>
    </string-array>
    <string-array name="dacia_models">
        <item>Model samochodu</item>
        <item>Dokker</item>
        <item>Duster</item>
        <item>Lodgy</item>
        <item>Logan</item>
        <item>Sandero</item>
    </string-array>
    <string-array name="daewoo_models">
        <item>Model samochodu</item>
        <item>Espero</item>
        <item>Evanda</item>
        <item>Kalos</item>
        <item>Lacetti</item>
        <item>Lanos</item>
        <item>Leganza</item>
        <item>Matiz</item>
        <item>Nexia</item>
        <item>Nubira</item>
        <item>Rezzo</item>
        <item>Tacuma</item>
    </string-array>
    <string-array name="dodge_mocels">
        <item>Model samochodu</item>
        <item>Avenger</item>
        <item>Caliber</item>
        <item>Challenger</item>
        <item>Charger</item>
        <item>Durango</item>
        <item>Grand Caravan</item>
        <item>Journey</item>
        <item>Nitro</item>
        <item>RAM</item>
        <item>Viper</item>
    </string-array>
    <string-array name="fiat_models">
        <item>Model samochodu</item>
        <item>124</item>
        <item>125</item>
        <item>126</item>
        <item>500</item>
        <item>Albea</item>
        <item>Barchetta</item>
        <item>Brava</item>
        <item>Bravo</item>
        <item>Cinqucento</item>
        <item>Coupe</item>
        <item>Croma</item>
        <item>Doblo</item>
        <item>Ducato</item>
        <item>Fullback Double</item>
        <item>Grande Punto</item>
        <item>Idea</item>
        <item>Linea</item>
        <item>Multipla</item>
        <item>Palio</item>
        <item>Panda</item>
        <item>Punto</item>
        <item>Qubo</item>
        <item>Regata</item>
        <item>Scudo</item>
        <item>Sedici</item>
        <item>Seicento</item>
        <item>Stilo</item>
        <item>Talento</item>
        <item>Tempra</item>
        <item>Tipo</item>
        <item>Ulysse</item>
        <item>Uno</item>
    </string-array>
    <string-array name="ford_models">
        <item>Model samochodu</item>
        <item>B-MAX</item>
        <item>C-MAX</item>
        <item>Cougar</item>
        <item>EcoSport</item>
        <item>Edge</item>
        <item>Escort</item>
        <item>Expedition</item>
        <item>Explorer</item>
        <item>Fiesta</item>
        <item>Focus</item>
        <item>Fusion</item>
        <item>Galaxy</item>
        <item>Granada</item>
        <item>Grand C-MAX</item>
        <item>Ka</item>
        <item>Kuga</item>
        <item>Maverick</item>
        <item>Mondeo</item>
        <item>Mustang</item>
        <item>Orion</item>
        <item>Probe</item>
        <item>Puma</item>
        <item>Ranger</item>
        <item>S-MAX</item>
        <item>Scorpio</item>
        <item>Sierra</item>
        <item>Sportka</item>
        <item>Streetka</item>
        <item>Taunus</item>
        <item>Taurus</item>
        <item>Thunderbird</item>
        <item>Tourneo</item>
        <item>Transit</item>
        <item>Windstar</item>
        <item></item>
    </string-array>
    <string-array name="honda_models">
        <item>Model samochodu</item>
        <item>Accord</item>
        <item>Aerodeck</item>
        <item>City</item>
        <item>Civic</item>
        <item>Concerto</item>
        <item>CR-V</item>
        <item>CR-Z</item>
        <item>CRX</item>
        <item>FR-V</item>
        <item>HR-V</item>
        <item>Insight</item>
        <item>Integra</item>
        <item>Jazz</item>
        <item>Legend</item>
        <item>Logo</item>
        <item>Odyssey</item>
        <item>Prelude</item>
        <item>S2000</item>
        <item>Shuttle</item>
        <item>Stream</item>
    </string-array>
    <string-array name="hyundai_models">
        <item>Model samochodu</item>
        <item>Accent</item>
        <item>Atos</item>
        <item>Coupe</item>
        <item>Elantra</item>
        <item>Gensis</item>
        <item>Getz</item>
        <item>Grandeur</item>
        <item>i10</item>
        <item>i20</item>
        <item>i30</item>
        <item>i40</item>
        <item>Ioniq</item>
        <item>ix20</item>
        <item>ix35</item>
        <item>Kona</item>
        <item>Lantra</item>
        <item>Matrix</item>
        <item>Pony</item>
        <item>Santa Fe</item>
        <item>Satellite</item>
        <item>Scoupe</item>
        <item>Sonata</item>
        <item>Stellar</item>
        <item>Terracan</item>
        <item>Trajet</item>
        <item>Tucson</item>
        <item>Veloster</item>
        <item></item>
    </string-array>
    <string name="choose_period_time">Okres wyliczania kosztów</string>
    <string name="toolbar_instruction">Instrukcja</string>
    <string name="toolbar_about_app">O Aplikacji</string>
    <string name="activity_add_fuel_date_hint">Data</string>
    <string name="activity_add_fuel_unit_cost">ZŁ</string>
    <string name="activity_add_fuel_unit_quantity">L</string>
    <string name="activity_add_fuel_unit_mileage">KM</string>
    <string name="menu_export">Eksport danych</string>
    <string name="menu_import">Import danych</string>
</resources>