<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.AllCarsActivity">

    <item
        android:id="@+id/menu_instruction"
        android:orderInCategory="100"
        android:title="@string/toolbar_instruction"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/toolbar_about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:orderInCategory="100"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:orderInCategory="100"
        android:title="@string/menu_import"
        app:showAsAction="never" />
</menu>
