<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basicBackground"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".activities.AddFuelActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <Spinner
        android:id="@+id/insertTypeFuelSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:padding="2dp"
        android:spinnerMode="dropdown"
        android:tooltipText="@string/fuelType" />

    <EditText
        android:id="@+id/insertDataFuel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:focusableInTouchMode="false"
        android:hint="@string/activity_add_fuel_date_hint"
        android:importantForAutofill="no"
        android:inputType="date" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:padding="2dp">

        <EditText
            android:id="@+id/insertCostFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/cost"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/activity_add_fuel_unit_cost" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:padding="2dp">

        <EditText
            android:id="@+id/insertQuantityFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/Quantity"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:text="@string/activity_add_fuel_unit_quantity" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:padding="2dp">

        <EditText
            android:id="@+id/insertMileageFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Distance"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/activity_add_fuel_unit_mileage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical">
    </RelativeLayout>

    <Button
        android:id="@+id/saveFuel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="15"
        android:background="@color/colorForButton"
        android:onClick="saveFuel"
        android:text="@string/Save"
        android:textSize="20sp" />
</LinearLayout>