<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normalBackground"
    android:orientation="vertical"
    android:weightSum="100">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinnerBranchCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="10"
        android:textAlignment="center"
        app:hintText="@string/markCar" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinnerModelCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:hintText="@string/modelCar"
        android:layout_margin="7dp"
        android:layout_weight="10"
        android:visibility="invisible"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinnerTypeFuelCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="10"
        android:textAlignment="center"
        android:visibility="invisible"
        app:hintText="@string/fuelType" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinnerPeriodTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="10"
        android:textAlignment="center"
        android:visibility="invisible"
        app:hintText="@string/choose_period_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">
    </LinearLayout>

    <Button
        android:id="@+id/addNewCarButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="15"
        android:background="@color/colorForButton"
        android:onClick="onSaveNewCar"
        android:text="@string/Save"
        android:textSize="20sp" />

</LinearLayout>